@@ -2,7 +2,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use Test::More tests => 80;
-use Test::NoWarnings 1.04 ':early';
+use Test::Warnings;
 use Test::Deep 0.110;
 use Scalar::Util 'refaddr';
 
